# MAST3

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  README.md
.github/workflows/: build-and-test-mast.yml  learn-github-actions.yml
ci/: build_dependencies.sh  build_mast.sh  deploy_docs.sh  old_travis.yml
cmake/: FindADOLC.cmake
doc/: CMakeLists.txt  Doxyfile.in  deploy_rsa.enc  main.dox
doc/tutorials/: tutorials.dox  tutorials_heat_transfer.dox  variational_statement_to_compute_kernels.dox
doc/tutorials/code_snippets/: physics_elasticity_linear_continuum_strain_energy.cpp  physics_elasticity_linear_pressure_load.cpp
examples/: CMakeLists.txt
examples/conduction/: CMakeLists.txt
examples/conduction/example_1/: CMakeLists.txt  example_1.cpp
examples/conduction/example_2/: CMakeLists.txt  example_2.cpp
examples/fluid/example_1/: example_1.cpp
examples/fsi/example_1/: example_1.cpp
examples/structural/: CMakeLists.txt
examples/structural/example_1/: CMakeLists.txt  example_1.cpp
examples/structural/example_2/: CMakeLists.txt  example_2.cpp
examples/structural/example_3/: CMakeLists.txt  example_3.cpp
examples/structural/example_4/: CMakeLists.txt  example_4.cpp
examples/structural/example_5/: CMakeLists.txt  example_5.cpp
examples/structural/example_6/: CMakeLists.txt  example_6.cpp
examples/structural/example_7/: CMakeLists.txt  example_7.cpp
include/: CMakeLists.txt
include/mast/base/: exceptions.h  exceptions.hpp  mast_config.h.in  mast_data_types.h  material_point_data_storage.hpp  material_point_storage.hpp  material_point_system.hpp  parameter_data.hpp  scalar_constant.hpp
include/mast/fe/: fe_basis_derivatives.hpp  fe_var_data.hpp  scalar_field_wrapper.hpp
include/mast/numerics/: fem_operator_matrix.hpp  utility.hpp
include/mast/optimization/: design_parameter.hpp  design_parameter_vector.hpp
include/mast/util/: getpot_wrapper.hpp  perf_log.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  init_catch2.cpp  test_helpers.cpp  test_helpers.h
tests/fe/: CMakeLists.txt  quad_derivatives.hpp
tests/fe/libmesh/: CMakeLists.txt  fe_basis_quad4.cpp
tests/mesh/: CMakeLists.txt
tests/mesh/libmesh/: CMakeLists.txt  geometric_filter.cpp
tests/optimization/: CMakeLists.txt
tests/optimization/aggregation/: CMakeLists.txt  discrete_aggregation.cpp
tests/optimization/solvers/: CMakeLists.txt  gcmma_interface.cpp  snopt_interface.cpp
tests/optimization/topology/: CMakeLists.txt
tests/physics/: CMakeLists.txt
tests/physics/conduction/: CMakeLists.txt  flux_load.cpp  linear_conduction_kernel.cpp  source_kernel.cpp
tests/physics/elasticity/: CMakeLists.txt  flat_shell_face_pressure_load_complex_step_sensitivity.cpp  isotropic_stiffness.cpp  linear_continuum_acceleration.cpp  linear_strain_energy.cpp  linear_thermoelastic_load.cpp  mindlin_plate_strain_energy_complex_step_sensitivity.cpp  plate_bending_section_property_complex_step_sensitivity.cpp  plate_linear_acceleration.cpp  pressure_load.cpp  stress_evaluation.cpp  traction_load.cpp  von_mises_stress.cpp  von_mises_stress_adolc_sensitivity.cpp  von_mises_stress_complex_step_sensitivity.cpp  von_mises_yield_criterion.cpp
tests/solvers/: CMakeLists.txt
tests/solvers/eigen/: CMakeLists.txt  constrained_generalized_hermitian_eigen_solver.cpp  hermitian_eigen_solver.cpp  nonlinear_solver.cpp
tests/solvers/petsc/: CMakeLists.txt  nonlinear_solver.cpp
(+86 files in other folders)
