add_subdirectory(example_1) # membrane extension
add_subdirectory(example_2) # mindlin plate bending
add_subdirectory(example_5) # SIMP min-compliance topology sensitivity verification
add_subdirectory(example_6) # SIMP min-compliance topology with MPI
add_subdirectory(example_7) # h-adaptive SIMP min-compliance topology with MPI
